--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Stock Price Movement Classifier Requirements
+
 # Data manipulation and analysis
 pandas>=1.3.0
 numpy>=1.21.0
@@ -7,7 +8,9 @@ numpy>=1.21.0
 yfinance>=0.1.70
 
 # Machine learning
-tensorflow>=2.10.0  # Use tensorflow-macos for Apple Silicon
+torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0
 scikit-learn>=1.0.0
 
 # Visualization
