--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,25 +1,12 @@
-# Stock Price Movement Classifier Requirements
 
-# Data manipulation and analysis
-pandas>=1.3.0
-numpy>=1.21.0
-
-# Stock data
-yfinance>=0.1.70
-
-# Machine learning
+# requirements.txt for dashboard
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.24.0
 torch>=2.0.0
-torchvision>=0.15.0
-torchaudio>=2.0.0
-scikit-learn>=1.0.0
-
-# Visualization
-matplotlib>=3.5.0
-seaborn>=0.11.0
-plotly>=5.10.0
-
-# Dashboard
-streamlit>=1.15.0
-
-# Development
-jupyter>=1.0.0
+scikit-learn>=1.3.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+plotly>=5.15.0
+yfinance>=0.2.0
+pickle-mixin>=1.0.2
